--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@tauri-apps/api": "^2.10.1",
+    "@vite-pwa/nuxt": "^1.1.1",
     "lucide-vue-next": "^0.575.0",
     "nuxt": "^4.3.1",
     "vue": "^3.5.28",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.14.0"
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@tauri-apps/cli": "^2.10.0"
   }
 }
